tests/ui/static/issue-18118-2.rs
pub fn main() {
    const z: &'static isize = {
        static p: isize = 3;
        &p //~ ERROR referencing statics
    };
}
